# wp-python

./: .env  .env.dev  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README-REPO-NAME.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: worker.yml
doc/operating-record/: 修复问题总结.md  日志系统优化总结.md  最终修复总结.md  错误修复总结.md  需求完成总结.md  需求实现总结.md  项目总结.md
examples/: advanced_usage.py  auth_methods.py  basic_usage.py  common_usage.py  env_config_example.py  fastapi_plugin_example.py  media_upload_demo.py  migrate_from_csv.py  migrate_from_markdown.py  plugin_system_example.py  query_cookbook.py  quick_start.py
examples/deploy/: Dockerfile  README.md
examples/sample_data/: posts.csv
examples/sample_data/md/: post-1.md  post-2.md
src/wp_python/: __init__.py  wordpress.py
src/wp_python/core/: __init__.py  client.py  exceptions.py  models.py
src/wp_python/plugin/: __init__.py  base.py
src/wp_python/plugin/fastapi/: __init__.py  middleware.py  plugin.py  routes.py  server.py
src/wp_python/service/: __init__.py  categories.py  comments.py  media.py  pages.py  posts.py  tags.py  users.py
src/wp_python/utils/: __init__.py  config.py  helpers.py  logger.py  query.py
tests/: test_basic.py
